fixed the horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -470,9 +470,8 @@ template {
   margin: 0;
 }
 
-.header-slider__item figure div {
+.header-slider__item-image {
   display: block;
-  max-width: 100%;
   height: 70vh;
   position: relative;
   background-position: 50% 50%;
@@ -483,8 +482,6 @@ template {
   position: absolute;
   top: 33.1%;
   left: 24%;
-  width: 100%;
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -510,8 +507,8 @@ template {
 .header-slider__item-category-info::after {
   content: 'olins';
   position: absolute;
-  left: -1.5%;
-  top: -38.7%;
+  left: -3.9%;
+  top: -16.7%;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -523,7 +520,7 @@ template {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  font-size: 353px;
+  font-size: 350px;
   color: rgba(115, 73, 91, 0.05);
   font-family: 'Raleway', sans-serif;
   font-style: italic;
