--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -8,15 +8,15 @@
       figure {
         position: relative;
         margin: 0;
+      }
 
-        div {
-          display: block;
-          max-width: 100%;
-          height: 70vh;
-          position: relative;
-          background-position: 50% 50%;
-          background-size: cover;
-        }
+      &-image {
+        display: block;
+        // max-width: 100%;
+        height: 70vh;
+        position: relative;
+        background-position: 50% 50%;
+        background-size: cover;
       }
 
       &-category {
@@ -25,8 +25,8 @@
         top: 33.1%;
         // left: 0;
         left: 24%;
-        width: 100%;
-        height: 100%;
+        // width: 100%;
+        // height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -44,15 +44,15 @@
             content: 'olins';
             position: absolute;
             // left: -30px;
-            left: -1.5%;
+            left: -3.9%;
             // top: -40px;
-            top: -38.7%;
+            top: -16.7%;
             width: 100%;
             height: 100%;
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            font-size: 353px;
+            font-size: 350px;
             color: rgba(115, 73, 91, 0.05);
             font-family: 'Raleway', sans-serif;
             font-style: italic;
